Removed overflow, changed fonts, fixed random margin errors, removed extra button container class, added an About section. Note: Have to rewrite About section since I stole it directly from HackPrinceton

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,21 +1,70 @@
 
 body {
-  width: 100%;
-  height: 100%;
-  background-color: #0093FF;
-  overflow: hidden;
-  font-family: 'Lato', sans-serif;
-
+  font-family: 'Helvetica', sans-serif;
+  margin: 0px !important;
 }
 
+#splash  {
+  background-color: #4cb3ff;
+  width:100vw;
+  height:100vh;
+  padding: 20px;
+}
+
+#about {
+  background-color: #fff;
+  padding:50px;
+  max-width:1000px;
+}
+
+#infobox {
+  padding:20px;
+  text-align: center;
+  font-size:20px;
+  max-width:700px;
+}
+
+h2 {
+  font-family: 'Raleway';
+  color:#4cb3ff;
+  font-size:40px;
+  font-weight:300px;
+  text-align: center;
+}
+
+h3 {
+  font-family: 'Raleway';
+}
+
+hr {
+    border: none;
+    height: 3px;
+  margin-left: 15em;
+  margin-right: 15em;
+    /* Set the hr color */
+    color: #a5d9ff; /* old IE */
+    background-color: #a5d9ff; /* Modern Browsers */
+}
+
+#infoimg img {
+  padding:20px;
+  width:auto;
+  height:200px;
+  float: left;
+}
+
+
 .header{
-  font-size: 75px;
-  margin-top: 20px;
+  font-family: 'Raleway';
+  margin: 0;
+  font-weight:300px;
+  font-size:70px;
+  padding:20px;
 }
 
 .sub{
-  font-size: 20px;
-  margin-top: -55px;
+  font-size: 30px;
+  margin:0;
 }
 
 .white{
@@ -29,14 +78,9 @@ body {
 .sun-container{
   display: block;
   position: relative;
-  margin-top: 300px;
+  margin-top: 230px;
 }
 
-
-.button-container {
-  text-align: center;
-  margin-top: 20px;
-}
 
 .button:hover {
   color: #3E3E3E;
@@ -45,7 +89,7 @@ body {
 
 .button-container {
   text-align: center;
-  margin-top: 500px;
+  padding-top:100px;
 }
 
 a{
